# spotlight

./: index.html  package-lock.json  package.json
.cursor/rules/: Tauri-v2-Tailwind-v4-Specialist.mdc
.cursor/skills/spotlight-architecture/: SKILL.md
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  system.rs
src-tauri/src/apps/: mod.rs  types.rs
src-tauri/src/apps/icon/: macos.rs  mod.rs  windows.rs
src-tauri/src/apps/scanner/: macos.rs  mod.rs  windows.rs
src/components/: HotkeySettingsPanel.tsx  QuickLaunchSettingsPanel.tsx  ResultsList.tsx  RgbBorderWrapper.tsx  RgbSettingsPanel.tsx  SearchInput.tsx  SpotlightPanel.tsx  WindowKeyboardLayer.tsx
src/components/command-deck/: AddAppModal.tsx  AppListItem.tsx  ApplicationsSection.tsx  CommandDeckPanel.tsx  CommandDeckSearch.tsx  FavoritesBar.tsx  FilterTags.tsx  KeyboardFooter.tsx  ShortcutBar.tsx
src/components/command-deck/settings/: AppearanceSection.tsx  AppsManagerSection.tsx  CategoriesSection.tsx  CategoryAppsEditor.tsx  (+7 more)
src/context/: AppLauncherContext.tsx  HotkeyContext.tsx  QuickLaunchContext.tsx  RgbEffectContext.tsx  SystemBehaviorContext.tsx  ThemeContext.tsx
src/data/: mockApps.ts  mockItems.ts
src/hooks/: useSpotlightSearch.ts  useWindowAutoHeight.ts
src/lib/: launchApp.ts  pickAppPath.ts  platform.ts  startWindowDrag.ts  tauriApps.ts
src/types/: appLauncher.ts  hotkey.ts  quickLaunch.ts  rgbEffect.ts  systemBehavior.ts  theme.ts
